<resources>
    <string name="app_name">Naada</string>
    <string name="next">Next</string>
    <string name="hint">hint</string>
    <string name="log_in">LOG IN</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_small">Log in</string>
    <string name="todo">TODO</string>
    <string name="skip">SKIP</string>
    <string name="textview">TextView</string>
    <string name="main_activity">Main Activity</string>
    <string name="facebook_app_id">2957008511061182</string>
    <string name="fb_login_protocol_scheme">fb2957008511061182</string>
    <string name="residents">Residents</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="music">Music</string>
    <string name="ocean_trix">Ocean Trix</string>
    <string name="the_neutral_dreams">The Neutral Dreams</string>
    <string name="rating">Rating</string>
    <string name="_4_8">4.8</string>
    <string name="listening_now">Listening now</string>
    <string name="_372k">372k</string>
    <string name="tastemaqers">TASTEMAQERS</string>
    <string name="upcoming_shows">Upcoming Shows</string>
    <string name="rate">Rate</string>
    <string name="disable">Disable Dark Mode</string>
    <string name="enable">Enable Dark Mode</string>
    <string name="naada">Naada</string>
</resources>
