<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textColor="@color/button_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginLeft="20dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="243dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/colorTransparentWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/email_address"
            android:textColor="@color/button_text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/colorTransparentWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/button_text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_confpassword"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/colorTransparentWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/confirm_password"
            android:textColor="@color/button_text"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_confpassword" />

    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="36dp"
        android:text="@string/log_in_small"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/nextBtn"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="2dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="36dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextBtn"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>