<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:id="@+id/main"
    tools:context=".view.MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/bottom_navbar"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="68dp" />

    <ImageView
        android:id="@+id/imageAlbum"
        android:layout_width="385dp"
        android:layout_height="405dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:background="@drawable/player"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/drawer_layout"
        tools:targetApi="lollipop" />


    <ImageView
        android:id="@+id/play_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageAlbum"
        app:layout_constraintVertical_bias="0.942"
        app:srcCompat="@drawable/play_button"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tastemaqers"
        android:textColor="@color/title_main"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/imageAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="200dp"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop">
    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:src="@drawable/icon_add"
            app:backgroundTint="@color/button_text"
            app:fabSize="auto"
            app:rippleColor="@color/Red" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/music_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:backgroundTint="@color/button_text"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/container_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/Red"
        app:srcCompat="@drawable/ic_music_note"
        tools:ignore="VectorDrawableCompat"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dark_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        app:backgroundTint="@color/button_text"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/music_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/Red"
        app:srcCompat="@drawable/ic_wb_sunny"
        android:focusable="true"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/dark_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fab_text_bg"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:paddingRight="16dp"
        android:paddingBottom="6dp"
        android:text="@string/dark_mode"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/dark_fab"
        app:layout_constraintEnd_toStartOf="@+id/dark_fab"
        app:layout_constraintTop_toTopOf="@+id/dark_fab" />

    <TextView
        android:id="@+id/music_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fab_text_bg"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:paddingRight="16dp"
        android:paddingBottom="6dp"
        android:text="@string/music"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/music_fab"
        app:layout_constraintEnd_toStartOf="@+id/music_fab"
        app:layout_constraintTop_toTopOf="@+id/music_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>